add support for openid requests (#230)
* add support for openid requests

* cleanup

* add comment about unfinished addition

* 225 enroll via multichallenge optional (#231)

* Update java-client

* Update java-client

* Update java-client

* Update AuthenticationForm.java

* Update AuthenticationFormResult.java

* Update Util.java

* Update privacyIDEA.ftl

* Update pi-form.js

* Update PrivacyIDEAAuthenticator.java

* Update messages_en.properties

* Update PrivacyIDEAAuthenticator.java

* Update Util.java

* Update pi-form.js

* Update privacyIDEA.ftl

* 223 enroll via multichallenge for smartphone container (#232)

* Update privacyIDEA.ftl

* Update AuthenticationForm.java

* Update Util.java

* 222 passkey only (#234)

* Update Const.java

* Update Configuration.java

* Update PrivacyIDEAAuthenticatorFactory.java

* Update Configuration.java

* Update Mode.java

* Update PrivacyIDEAAuthenticator.java

* Update README.md

* Update PrivacyIDEAAuthenticatorFactory.java

* Update privacyIDEA.ftl

* Update Util.java

* Update PrivacyIDEAAuthenticatorFactory.java

* Update PrivacyIDEAAuthenticator.java

* Update src/main/java/org/privacyidea/authenticator/PrivacyIDEAAuthenticatorFactory.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update src/main/java/org/privacyidea/authenticator/PrivacyIDEAAuthenticatorFactory.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update PrivacyIDEAAuthenticatorFactory.java

* Update PrivacyIDEAAuthenticator.java

* Update privacyIDEA.ftl

* Update privacyIDEA.ftl

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* v1.6.0

* Bump org.keycloak:keycloak-services from 26.3.3 to 26.4.1 (#233)

Bumps [org.keycloak:keycloak-services](https://github.com/keycloak/keycloak) from 26.3.3 to 26.4.1.
- [Release notes](https://github.com/keycloak/keycloak/releases)
- [Commits](https://github.com/keycloak/keycloak/compare/26.3.3...26.4.1)

---
updated-dependen